src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/OVRMultiview_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/OVRMultiview_StringErrorContext.class */
public final class OVRMultiview_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glFramebufferTextureMultiviewOVR(IIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/OVRMultiviewErrorContext");
        methods.put("glNamedFramebufferTextureMultiviewOVR(IIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/OVRMultiviewErrorContext");
        return methods;
    }
}
